--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
-version: '3'
+version: '3.8'
 
 services:
   backend:
     build:
       context: ./backend
+      dockerfile: ./Dockerfile
     ports:
       - "5000:5000"
 
@@ -11,8 +12,15 @@ services:
   frontend:
     build:
       context: ./frontend
+      dockerfile: ./Dockerfile
+    volumes:
+      - ./frontend:/app:cached
+      - ./frontend/node_modules:/app/node_modules
     ports:
       - "3000:3000"
+    environment:
+      - WATCHPACK_POLLING=true
+    
   
   minio:
     image: minio/minio:RELEASE.2023-01-06T18-11-18Z
